<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/my_title"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="showMessage" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:textColor="@color/black"
        android:background="@color/orange"
        android:layout_margin="5dp"
        android:onClick="showMessage"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_margin="5dp"
        android:onClick="showMessage"/>


</LinearLayout>
